# fls

./: .dockerignore  Cargo.toml  Containerfile  Makefile  README.md  build.sh  podman-build.sh
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: sparse-image-support.md
src/: block_flash.rs  lib.rs  main.rs
src/block_flash/: block_writer.rs  dd.rs  decompress.rs  download.rs  error_handling.rs  http.rs  mod.rs  options.rs  progress.rs
src/fls/: automotive.rs  block_writer.rs  bmap_parser.rs  byte_channel.rs  compression.rs  decompress.rs  download_error.rs  error_handling.rs  fastboot.rs  format_detector.rs  from_url.rs  http.rs  magic_bytes.rs  memory.rs  mod.rs  options.rs  progress.rs  simg.rs  stream_utils.rs
src/fls/oci/: auth.rs  from_oci.rs  manifest.rs  mod.rs  reference.rs  registry.rs
tests/: byte_bounded_memory.rs  from_url.rs  oci_extract.rs
tests/common/: mod.rs
tests/test_certs/: INVESTIGATION.md  README.md  SOLUTION.md  ca-cert.pem  ca-key.pem  generate_with_openssl.sh  server-cert.pem  server-key.pem
