[package]
name = "fls"
version = "0.1.7"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }
tokio = { version = "1.0", features = ["full", "process", "rt-multi-thread"] }
futures-util = "0.3"
bytes = "1.0"
indicatif = "0.17"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }
# Enable vendored OpenSSL for cross-compilation to musl targets
# This ensures OpenSSL builds from source with musl compatibility
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
xz2 = "0.1"
flate2 = "1.0"
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = { version = "0.13", features = ["ring"] }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
